RESOLVED FIXED114066
[BlackBerry] FatFingers Don't check the shadow tree for all elements.
https://bugs.webkit.org/show_bug.cgi?id=114066
Summary [BlackBerry] FatFingers Don't check the shadow tree for all elements.
Tiancheng Jiang
Reported 2013-04-05 14:57:55 PDT
No need to check the shadow tree anymore since sliders now uses touch events.
Attachments
Patch (1.56 KB, patch)
2013-04-05 15:15 PDT, Tiancheng Jiang
no flags
Tiancheng Jiang
Comment 1 2013-04-05 15:15:22 PDT
Rob Buis
Comment 2 2013-04-05 15:54:02 PDT
Comment on attachment 196689 [details] Patch Ok.
WebKit Commit Bot
Comment 3 2013-04-05 16:20:54 PDT
Comment on attachment 196689 [details] Patch Clearing flags on attachment: 196689 Committed r147807: <http://trac.webkit.org/changeset/147807>
WebKit Commit Bot
Comment 4 2013-04-05 16:20:56 PDT
All reviewed patches have been landed. Closing bug.
Antonio Gomes
Comment 5 2013-04-07 08:50:41 PDT
Pay attention to this one: 2013-03-24 Hayato Ito <hayato@chromium.org> Allow ShadowContents in HitTests by default. https://bugs.webkit.org/show_bug.cgi?id=113171 Shadow tree is hit-test'ed by default now.
Note You need to log in before you can comment on or make changes to this bug.