[BlackBerry] FatFingers Don't check the shadow tree for all elements. https://bugs.webkit.org/show_bug.cgi?id=114066

Patch by Tiancheng Jiang <tijiang@rim.com> on 2013-04-05
Reviewed by Rob Buis.

BlackBerry PR 263078
Internally reviewed by Genevieve Mak.

No need to check shadow tree since sliders use touch events.

* WebKitSupport/FatFingers.cpp:
(BlackBerry::WebKit::FatFingers::isElementClickable):

Canonical link: https://commits.webkit.org/132443@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@147807 268f45cc-cd09-0410-ab3c-d52691b4dbfc